feat: add 'settings' translation and refine SettingsPage user data display and styling.

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -167,6 +167,7 @@
     "lastName": "Last Name",
     "phone": "Phone",
     "address": "Address",
+    "settings": "Settings",
     "updateSuccess": "Profile updated successfully"
   },
   "errors": {
