--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "name": "NeonRetreat",
+    "name": "Toosag",
     "description": "Manage your business with style",
     "welcome": "Welcome!",
     "chooseArea": "Choose the area you want to access"
