--- a/src/i18n/pt-PT.json
+++ b/src/i18n/pt-PT.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "name": "NeonRetreat",
+    "name": "Toosag",
     "description": "Faça a gestão da sua empresa com estilo",
     "welcome": "Bem-vindo!",
     "chooseArea": "Escolha a área que deseja aceder"
