--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -197,5 +197,131 @@
   "languages": {
     "pt-PT": "Português",
     "en-US": "English"
+  },
+  "public": {
+    "header": {
+      "blog": "Blog",
+      "about": "About Us",
+      "enterApp": "Enter App"
+    },
+    "footer": {
+      "tagline": "Your financial freedom starts with organization. Total privacy, no invasive automations.",
+      "legal": "Legal & Support",
+      "privacy": "Privacy",
+      "terms": "Terms of Use",
+      "about": "About Us",
+      "newsletter": "Stay updated",
+      "newsletterDesc": "Get the latest finance tips in your email.",
+      "emailPlaceholder": "Your email",
+      "copyright": "Made with ❤️ in Portugal"
+    },
+    "landing": {
+      "overline": "PERSONAL FINANCE 2.0",
+      "headline": "Your finances.",
+      "headlineHighlight": "Your way.",
+      "description": "Organize your financial and personal life without invasive automations. Total control, absolute privacy and premium design.",
+      "ctaStart": "Get Started Free",
+      "ctaLearnMore": "Learn More",
+      "noCard": "No credit card required",
+      "free": "100% Free",
+      "dashboardSecure": "Secure Dashboard",
+      "featuresOverline": "WHY CHOOSE US",
+      "featuresHeadline": "The manual method,",
+      "featuresHighlight": "Evolved",
+      "feature1Title": "Absolute Privacy",
+      "feature1Desc": "No bank connections. What happens in your bank, stays in your bank. Only what you decide to record enters here.",
+      "feature2Title": "Conscious Control",
+      "feature2Desc": "By recording each expense, you gain real awareness of your habits. Become the CEO of your finances, not a spectator.",
+      "feature3Title": "Total Flexibility",
+      "feature3Desc": "Create categories and folders that make sense for your life. Organize invoices, warranties and expenses in one place.",
+      "trustSsl": "SSL Encryption",
+      "trustNoData": "No Data Selling",
+      "trustFree": "100% Free",
+      "ctaHeadline": "Ready to organize your life?",
+      "ctaDescription": "Join thousands of people who have regained control of their finances.",
+      "ctaButton": "Create Free Account"
+    },
+    "blog": {
+      "title": "Blog & Financial Literacy",
+      "subtitle": "Tips, guides and reflections on how to master your money.",
+      "readArticle": "Read Article",
+      "home": "Home",
+      "blog": "Blog",
+      "author": "Editorial Team",
+      "likedArticle": "Did you enjoy this article?",
+      "likedArticleDesc": "Start organizing your finances today.",
+      "createAccount": "Create Free Account"
+    },
+    "privacy": {
+      "title": "Privacy Policy",
+      "lastUpdate": "Last updated:",
+      "intro": "Your privacy is our priority. At {app} (\"we\", \"our\"), we believe that your financial and personal data belongs only to you. This policy describes how we collect, use and protect your information.",
+      "section1Title": "1. Data Collection",
+      "section1Text": "We only collect information strictly necessary for the service to function:",
+      "section1Item1": "Account Information: Name, email and password (encrypted).",
+      "section1Item2": "Financial Data and Documents: Manually entered by you. This data is securely stored in our database.",
+      "section1Footer": "We do not have automatic access to your bank accounts through APIs (open banking/PSD2).",
+      "section2Title": "2. Use of Information",
+      "section2Text": "We use your data exclusively to:",
+      "section2Item1": "Provide, maintain and improve the platform;",
+      "section2Item2": "Process your transactions and store your documents;",
+      "section2Item3": "Send technical communications or password recoveries.",
+      "section2Footer": "We never sell your personal or financial data to third parties for marketing purposes.",
+      "section3Title": "3. Advertising and Cookies (Google AdSense)",
+      "section3Text": "To keep this service free, we use Google AdSense to display ads.",
+      "section3Item1": "Third parties, including Google, use cookies to serve ads based on the user's previous visits to your website or other websites.",
+      "section3Item2": "Google's use of advertising cookies allows it and its partners to serve ads to users based on their visits to your sites and/or other sites on the Internet.",
+      "section3Item3": "You can opt out of personalized advertising by visiting {link}.",
+      "section3Link": "Ad Settings",
+      "section4Title": "4. Data Security",
+      "section4Text": "We implement robust security measures, including encryption in transit (SSL/TLS) and encryption of sensitive data at rest. However, no method of transmission over the Internet is 100% secure.",
+      "section5Title": "5. Your Rights (GDPR)",
+      "section5Text": "In accordance with the General Data Protection Regulation (GDPR), you have the right to:",
+      "section5Item1": "Access your personal data;",
+      "section5Item2": "Rectify incorrect data;",
+      "section5Item3": "Request the deletion of your data (\"Right to be Forgotten\");",
+      "section5Item4": "Export your data.",
+      "section5Footer": "You can exercise these rights directly in your account settings or by contacting us."
+    },
+    "about": {
+      "title": "About Us",
+      "tagline": "We believe that technology should serve the user, not surveil them.",
+      "missionTitle": "Our Mission",
+      "missionText": "Our mission is to empower individuals to regain control of their financial life through awareness and organization, without giving up their digital privacy. In a world where \"free\" often means your data is the product, we chose a different path.",
+      "teamTitle": "Who We Are",
+      "teamText": "We are a team of technology and personal finance enthusiasts, tired of apps that require your bank passwords to work. We developed Toosag to be the digital sanctuary of your economic and documentary life.",
+      "commitmentTitle": "Our Commitment",
+      "commitmentText": "Total transparency. We fund the development and maintenance of this platform through ethical and visible advertising, rather than mining your data behind the scenes. What you enter here, stays here.",
+      "ctaTitle": "Join us",
+      "ctaText": "Start organizing your financial life today with total freedom.",
+      "ctaButton": "Create Free Account"
+    },
+    "terms": {
+      "title": "Terms of Use",
+      "lastUpdate": "Last updated:",
+      "section1Title": "1. Acceptance of Terms",
+      "section1Text": "By creating an account or using {app}, you agree to be bound by these Terms of Use. If you do not agree, you should not use the service.",
+      "section2Title": "2. Service Description",
+      "section2Text": "Toosag is a SaaS platform that allows users to manually record and organize their personal finances and documents.",
+      "section2Disclaimer": "Disclaimer: We do not provide professional financial, legal or tax advice. The tool is for organizational and informational purposes only.",
+      "section3Title": "3. User Responsibilities",
+      "section3Text": "The user is solely responsible for:",
+      "section3Item1": "The accuracy and truthfulness of the data entered;",
+      "section3Item2": "Maintaining the confidentiality of their access password;",
+      "section3Item3": "Ensuring that uploaded documents do not violate laws or third-party rights.",
+      "section4Title": "4. Intellectual Property",
+      "section4Text": "The software, design and source code of the platform are the exclusive property of Toosag. Data entered by the user remains the property of the user.",
+      "section5Title": "5. Limitation of Liability",
+      "section5Text": "Under no circumstances shall we be liable for any direct, indirect, incidental or consequential damages resulting from the use or inability to use the service, including loss of data or lost profits.",
+      "section6Title": "6. Modifications",
+      "section6Text": "We reserve the right to modify these terms at any time. We will notify users of significant changes."
+    },
+    "cookies": {
+      "title": "This site uses cookies",
+      "description": "We and our partners (Google AdSense) use cookies to personalize content and ads, provide social media features and analyze our traffic.",
+      "learnMore": "Learn more",
+      "decline": "Decline",
+      "acceptAll": "Accept All"
+    }
   }
 }
