--- a/src/i18n/pt-PT.json
+++ b/src/i18n/pt-PT.json
@@ -197,5 +197,131 @@
   "languages": {
     "pt-PT": "Português",
     "en-US": "English"
+  },
+  "public": {
+    "header": {
+      "blog": "Blog",
+      "about": "Sobre Nós",
+      "enterApp": "Entrar na App"
+    },
+    "footer": {
+      "tagline": "A sua liberdade financeira começa com organização. Privacidade total, sem automações invasivas.",
+      "legal": "Legal & Suporte",
+      "privacy": "Privacidade",
+      "terms": "Termos de Uso",
+      "about": "Sobre Nós",
+      "newsletter": "Mantenha-se atualizado",
+      "newsletterDesc": "Receba as últimas dicas de finanças no seu email.",
+      "emailPlaceholder": "Seu email",
+      "copyright": "Feito com ❤️ em Portugal"
+    },
+    "landing": {
+      "overline": "FINANÇAS PESSOAIS 2.0",
+      "headline": "As suas finanças.",
+      "headlineHighlight": "À sua maneira.",
+      "description": "Organize a sua vida financeira e pessoal sem automações invasivas. Controlo total, privacidade absoluta e design premium.",
+      "ctaStart": "Começar Gratuitamente",
+      "ctaLearnMore": "Saber Mais",
+      "noCard": "Sem cartão de crédito",
+      "free": "100% Gratuito",
+      "dashboardSecure": "Dashboard Seguro",
+      "featuresOverline": "PORQUÊ ESCOLHER-NOS",
+      "featuresHeadline": "O método manual,",
+      "featuresHighlight": "Evoluído",
+      "feature1Title": "Privacidade Absoluta",
+      "feature1Desc": "Sem conexões bancárias. O que acontece no seu banco, fica no seu banco. Aqui só entra o que você decide registar.",
+      "feature2Title": "Controlo Consciente",
+      "feature2Desc": "Ao registar cada despesa, ganha consciência real dos seus hábitos. Torne-se o CEO das suas finanças, não um espectador.",
+      "feature3Title": "Flexibilidade Total",
+      "feature3Desc": "Crie categorias e pastas que fazem sentido para a sua vida. Organize faturas, garantias e despesas num só lugar.",
+      "trustSsl": "Encriptação SSL",
+      "trustNoData": "Sem Venda de Dados",
+      "trustFree": "100% Gratuito",
+      "ctaHeadline": "Pronto para organizar a sua vida?",
+      "ctaDescription": "Junte-se a milhares de pessoas que recuperaram o controlo das suas finanças.",
+      "ctaButton": "Criar Conta Grátis"
+    },
+    "blog": {
+      "title": "Blog & Literacia Financeira",
+      "subtitle": "Dicas, guias e reflexões sobre como dominar o seu dinheiro.",
+      "readArticle": "Ler Artigo",
+      "home": "Início",
+      "blog": "Blog",
+      "author": "Equipa Editorial",
+      "likedArticle": "Gostou deste artigo?",
+      "likedArticleDesc": "Comece hoje mesmo a organizar as suas finanças.",
+      "createAccount": "Criar Conta Grátis"
+    },
+    "privacy": {
+      "title": "Política de Privacidade",
+      "lastUpdate": "Última atualização:",
+      "intro": "A sua privacidade é a nossa prioridade. No {app} (\"nós\", \"nosso\"), acreditamos que os seus dados financeiros e pessoais são apenas seus. Esta política descreve como recolhemos, usamos e protegemos as suas informações.",
+      "section1Title": "1. Recolha de Dados",
+      "section1Text": "Recolhemos apenas as informações estritamente necessárias para o funcionamento do serviço:",
+      "section1Item1": "Informações da Conta: Nome, email e palavra-passe (encriptada).",
+      "section1Item2": "Dados Financeiros e Documentos: Inseridos manualmente por si. Estes dados são armazenados de forma segura na nossa base de dados.",
+      "section1Footer": "Não temos acesso automático às suas contas bancárias através de APIs (banco aberto/PSD2).",
+      "section2Title": "2. Uso das Informações",
+      "section2Text": "Utilizamos os seus dados exclusivamente para:",
+      "section2Item1": "Fornecer, manter e melhorar a plataforma;",
+      "section2Item2": "Processar as suas transações e armazenar os seus documentos;",
+      "section2Item3": "Enviar comunicações técnicas ou recuperações de senha.",
+      "section2Footer": "Nunca vendemos os seus dados pessoais ou financeiros a terceiros para fins de marketing.",
+      "section3Title": "3. Publicidade e Cookies (Google AdSense)",
+      "section3Text": "Para manter este serviço gratuito, utilizamos o Google AdSense para exibir anúncios.",
+      "section3Item1": "Terceiros, incluindo a Google, usam cookies para veicular anúncios com base em visitas anteriores do utilizador ao seu website ou a outros websites.",
+      "section3Item2": "O uso de cookies de publicidade pela Google permite que esta e os seus parceiros veiculem anúncios aos utilizadores com base nas suas visitas aos seus sites e/ou a outros sites na Internet.",
+      "section3Item3": "Pode optar por desativar a publicidade personalizada visitando as {link}.",
+      "section3Link": "Definições de Anúncios",
+      "section4Title": "4. Segurança dos Dados",
+      "section4Text": "Implementamos medidas de segurança robustas, incluindo encriptação em trânsito (SSL/TLS) e encriptação de dados sensíveis em repouso. No entanto, nenhum método de transmissão pela Internet é 100% seguro.",
+      "section5Title": "5. Os Seus Direitos (RGPD)",
+      "section5Text": "De acordo com o Regulamento Geral sobre a Proteção de Dados (RGPD), tem o direito de:",
+      "section5Item1": "Aceder aos seus dados pessoais;",
+      "section5Item2": "Retificar dados incorretos;",
+      "section5Item3": "Solicitar a eliminação dos seus dados (\"Direito ao Esquecimento\");",
+      "section5Item4": "Exportar os seus dados.",
+      "section5Footer": "Pode exercer estes direitos diretamente nas configurações da sua conta ou contactando-nos."
+    },
+    "about": {
+      "title": "Sobre Nós",
+      "tagline": "Acreditamos que a tecnologia deve servir o utilizador, não vigiá-lo.",
+      "missionTitle": "A Nossa Missão",
+      "missionText": "A nossa missão é empoderar indivíduos a retomarem o controlo da sua vida financeira através da consciência e organização, sem abdicar da sua privacidade digital. Num mundo onde \"grátis\" significa frequentemente que os seus dados são o produto, nós escolhemos um caminho diferente.",
+      "teamTitle": "Quem Somos",
+      "teamText": "Somos uma equipa de entusiastas por tecnologia e finanças pessoais, cansados de aplicações que exigem as suas senhas bancárias para funcionar. Desenvolvemos o Toosag para ser o santuário digital da sua vida económica e documental.",
+      "commitmentTitle": "O Nosso Compromisso",
+      "commitmentText": "Transparência total. Financiamos o desenvolvimento e manutenção desta plataforma através de publicidade ética e visível, em vez de minerar os seus dados nos bastidores. O que você insere aqui, fica aqui.",
+      "ctaTitle": "Junte-se a nós",
+      "ctaText": "Comece hoje a organizar a sua vida financeira com total liberdade.",
+      "ctaButton": "Criar Conta Gratuita"
+    },
+    "terms": {
+      "title": "Termos de Uso",
+      "lastUpdate": "Última atualização:",
+      "section1Title": "1. Aceitação dos Termos",
+      "section1Text": "Ao criar uma conta ou utilizar o {app}, concorda em ficar vinculado a estes Termos de Uso. Se não concordar, não deverá utilizar o serviço.",
+      "section2Title": "2. Descrição do Serviço",
+      "section2Text": "O Toosag é uma plataforma SaaS que permite aos utilizadores registar e organizar manualmente as suas finanças pessoais e documentos.",
+      "section2Disclaimer": "Isenção de Responsabilidade: Nós não fornecemos aconselhamento financeiro, legal ou fiscal profissional. A ferramenta serve apenas para fins de organização e informação.",
+      "section3Title": "3. Responsabilidades do Utilizador",
+      "section3Text": "O utilizador é o único responsável:",
+      "section3Item1": "Pela veracidade e precisão dos dados inseridos;",
+      "section3Item2": "Por manter a confidencialidade da sua senha de acesso;",
+      "section3Item3": "Por garantir que os documentos carregados não violam leis ou direitos de terceiros.",
+      "section4Title": "4. Propriedade Intelectual",
+      "section4Text": "O software, design e código-fonte da plataforma são propriedade exclusiva do Toosag. Os dados inseridos pelo utilizador permanecem propriedade do utilizador.",
+      "section5Title": "5. Limitação de Responsabilidade",
+      "section5Text": "Em nenhuma circunstância seremos responsáveis por quaisquer danos diretos, indiretos, incidentais ou consequentes resultantes do uso ou incapacidade de usar o serviço, incluindo perda de dados ou lucros cessantes.",
+      "section6Title": "6. Modificações",
+      "section6Text": "Reservamo-nos o direito de modificar estes termos a qualquer momento. Notificaremos os utilizadores sobre alterações significativas."
+    },
+    "cookies": {
+      "title": "Este site utiliza cookies",
+      "description": "Nós e os nossos parceiros (Google AdSense) utilizamos cookies para personalizar conteúdos e anúncios, fornecer funcionalidades de redes sociais e analisar o nosso tráfego.",
+      "learnMore": "Saiba mais",
+      "decline": "Recusar",
+      "acceptAll": "Aceitar Todos"
+    }
   }
 }
